[gd_scene load_steps=4 format=3 uid="uid://dgedici0if2ki"]

[ext_resource type="Script" path="res://scenes/enemies/Spawner_falling_platform.gd" id="1_27vij"]
[ext_resource type="PackedScene" uid="uid://fn7qpwx5p80l" path="res://scenes/enemies/falling_platform.tscn" id="2_k7h0f"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gvyg3"]
radius = 195.921

[node name="SpawnerFallSpike2" type="Node2D" groups=["falling_platform_spawner"]]
z_index = 1
script = ExtResource("1_27vij")
platform_scene = ExtResource("2_k7h0f")
max_platforms = 100
spawn_point_node = NodePath("SpawnPoint")

[node name="DetectionArea" type="Area2D" parent="."]
position = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(0, 192)
shape = SubResource("CircleShape2D_gvyg3")

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(0, 8)

[node name="SpawnTimer" type="Timer" parent="."]

[node name="IntensityTimer" type="Timer" parent="."]
